--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.19.0"
+    "@tinymce/tinymce-react": "^4.2.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.19.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.8"
   }
 }
