--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@tinymce/tinymce-react": "^4.1.0",
-    "draft-js": "^0.11.7"
+    "-": "^0.0.1",
+    "@tailwindcss/line-clamp": "^0.4.0"
   }
 }
