--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "-": "^0.0.1",
-    "@tailwindcss/line-clamp": "^0.4.0"
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "localforage": "^1.10.0"
   }
 }
